--- a/src/template.html
+++ b/src/template.html
@@ -17,6 +17,20 @@
   <body>
     <div class="pageContainer">
       <div id="app"></div>
+      <div id="modal" class="modal" style="display: none">
+        <div class="modal-content">
+          <span id="close" class="close">&times;</span>
+          <h2>To-do details</h2>
+          <p id="todo-details">
+            <!-- Todo details will be rendered here -->
+          </p>
+          <button
+            onclick="document.getElementById('modal').style.display='none'"
+          >
+            Close
+          </button>
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
