--- a/src/template.html
+++ b/src/template.html
@@ -20,10 +20,32 @@
       <div id="modal" class="modal" style="display: none">
         <div class="modal-content">
           <span id="close" class="close">&times;</span>
-          <h2>To-do details</h2>
-          <p id="todo-details">
-            <!-- Todo details will be rendered here -->
-          </p>
+          <h2 id="modal-title">To-do Details</h2>
+          <div id="add-task-section">
+            <input
+              type="text"
+              id="task-title"
+              placeholder="Task Title"
+              required
+            />
+            <textarea id="task-desc" placeholder="Task Description"></textarea>
+            <div>
+              <label>Priority:</label>
+              <input type="radio" name="priority" value="High" /> High
+              <input type="radio" name="priority" value="Medium" /> Medium
+              <input type="radio" name="priority" value="Low" /> Low
+            </div>
+            <input type="date" id="due-date" />
+            <button id="create-task">Create Task</button>
+          </div>
+          <div id="view-task-section">
+            <h3>Current Tasks</h3>
+            <ul id="task-list"></ul>
+          </div>
+          <div id="view-task-detail">
+            <h3>Task Details</h3>
+            <ul id="task-detail-list"></ul>
+          </div>
           <button
             onclick="document.getElementById('modal').style.display='none'"
           >
