--- a/src/template.html
+++ b/src/template.html
@@ -58,7 +58,7 @@
           </div>
           <div id="view-task-detail">
             <h3 class="mb-3">Task Details</h3>
-            <ul class="py-3" id="task-detail-list"></ul>
+            <ul class="pb-3 py-3" id="task-detail-list"></ul>
           </div>
           <button
             class="btn btn-outline-primary"
